[package]
name = "convey"
version = "0.4.0"
authors = ["Ben Parli <bparli@gmail.com>"]
edition = "2018"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }

[profile.release]
debug = true

[dependencies]
docopt = "1.1"
log = "0.4"
env_logger = "0.8"
serde_derive = "1.0"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
toml = "0.4"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
iron = "0.6"
router = "0.6"
rand = "0.7"
notify = "4.0"
hash_ring = { git = "https://github.com/bparli/rust-hash-ring", branch = "derive-clone-hashring" }
pnet = "0.27"
pnet_macros_support = "0.27"
lru_time_cache = "0.8"
socket2 = "0.3"
afxdp = "0.4" 
libbpf-sys = "0.3.0-1"
rebpf = "0.1"
rlimit = "0.5"
arraydeque = "0.4"
core_affinity = "0.5"
hex = "0.4"